<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_activity_title">About Coin Flip</string>
    <string name="about_menu_title">About us</string>
    <string name="about_text">
        A convenient way to flip a coin, even if you don\'t have one.
        Simply tap the coin mark to view the result.
        \n\n\n\n Copyright © 2018 - Arash Mohammadi
        \n Email: arash13131313@gmail.com
    </string>
    <string name="app_name">Heads or Tails</string>
    <string name="coin_animation">Coin Animation</string>
    <string name="exit">Exit</string>
    <string name="instructions_tap_shake_tv">Tap/Shake to Flip Coin</string>
    <string name="instructions_tap_tv">Tap to Flip Coin</string>
    <string name="heads">HEADS</string>
    <string name="max">MAX</string>
    <string name="milliseconds">ms</string>
    <string name="min">OFF</string>
    <string name="new_coins">Sweet! New coins available!</string>
    <string name="rate_app_text">Rate App on Google Play</string>
    <string name="reset">Reset</string>
    <string name="customize">Themes</string>
    <string name="tails">TAILS</string>
    <string name="time">TIME</string>
    <string name="toast_coin_error">Coin Not Found - Resetting Selection</string>
    <string name="total">TOTAL</string>
    <string name="unknown">UNKNOWN</string>
    <string name="version">version</string>
    <string name="laguage">English</string>
    <string name="coin">Coins</string>
    <string name="buyButton">Buy (1900 Tomans)</string>
    <string name="buyExplain">By buying this package, you will unlock all themes and coins and remove the ads. And you will support us :)!</string>
    <string name="buyUnlocksCoin">Coin Unlocks:</string>
    <string name="buyUnlocksTheme">Theme Unlocks:</string>
    <string name="tapToBuy">Tap to buy (Only in Iran)</string>
    <string name="alreadyPremium">You already have this package!</string>

    <string name="coin_list">
        <li>1 Dollar</li>\n
        <li>250 Rials</li>\n
        <li>100 Rials</li>\n
        <li>50 Rials</li>\n
        <li>50 Rials</li>\n
        <li>2 Rials</li>\n
        <li>1 Rials</li>
    </string>
    <string name="theme_list">
        <li>Blue Theme</li>\n
        <li>Red Theme</li>\n
        <li>Black Theme</li>\n
        <li>Golden Theme</li>
    </string>
    <!--free themes-->
    <string name="defaultTheme">Default</string>
    <string name="greenTheme">Green</string>
    <!--premium themes-->
    <string name="blueTheme">Blue</string>
    <string name="redTheme">Red</string>
    <string name="blackTheme">Black</string>
    <string name="goldenTheme">Golden</string>

    <!--free coins-->
    <string name="r500">5000 Rials</string>
    <string name="r200">2000 Rials</string>
    <string name="r100">1000 Rials</string>
    <string name="r50">500 Rials</string>
    <!--premium coins-->
    <string name="r25">250 Rials</string>
    <string name="r10">100 Rials</string>
    <string name="r5">50 Rials</string>
    <string name="r52">50 Rials</string>
    <string name="r2">2 Rials</string>
    <string name="r1">1 Rial</string>
    <string name="d1">1 Dollar</string>
</resources>

